[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "toycoin"
version = "0.0.1"
authors = [
  { name="Praguna", email="praguna.manvi@gmail.com" },
]
description = "Educational Toy Coin"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/praguna/toy-coin"
"Bug Tracker" = "https://github.com/praguna/toy-coin/issues"